	      e.g. `##contig=<ID=chr22>` added after a lift from chr1 to chr22
	    - Create/update the "assembly" field
	      e.g. `##assembly=liftoverSV used with hg19ToHg38.over.chain`
	    - Create the "liftoverSV_version" field
	      e.g. `##liftoverSV_version=0.1.2_beta; hg19ToHg38.over.chain; August 30 2024 12:30`
	    - Update the "INFO" and "FORMAT field if one value is missing.
	      As the format (Number, String) is not known, "Number=." and "Type=String" values are used by default:
	      e.g. `##FORMAT=<ID=XXX,Number=.,Type=String,Description="XXX">`
	      e.g. `##INFO=<ID=YYY,Number=.,Type=String,Description="YYY">`


July, 23, 2024, liftoverSV version 0.1.2_beta
	- Sort and compress the VCF output file with bcftools
	- Display the number of mapped SV in the output
	- Update the contig field in the VCF header output:
	  => The structured contig field includes all the ID attributes (do not include additional optional attributes)
	     e.g. `##contig=<ID=chr22>`
	- Add a DOI in README.md
	- Lift over INFO/SVLEN, INFO/SVSIZE only for deletion, duplication, insertion and inversion
	  => For other SV types (e.g. translocation, complex SV, etc..), the SVLEN is set to . in the output file when present in the input file
	- Check if the VCF input file and the CHAIN file have the same chromosome format (with or without the "chr" prefix)


July, 23, 2024, liftoverSV version 0.1.1_beta
	- Add the --PERCENT,P option


July, 12, 2024, liftoverSV version 0.1.0_beta

	liftoverSV: Lifts over a Structural Variation VCF file from one reference build to another.

	Purpose:
	- Lift over #CHROM and POS

	- Lift over INFO/END and INFO/SVEND
	=> drop the SV if:
	Case1: one position (start or end) is lifted while the other doesn't
	Case2: one position (start or end) goes to a different chrom from the other
	Case3: "lifted start" > "lifted end"
	Case4: the distance between the two lifted positions changes significantly (difference between both SVLENs > 5%)
