@@ -1,0 +1,3 @@
+$LIFTOVERSV/bin/liftoverSV -I input_TRA.hg19.vcf  -O ./output_hg38.vcf -C $CHAIN_DIR/hg19ToHg38.over.chain --REFFASTASEQ /PUBLIC_DATA/ReferenceGenomes/UCSChg38/hg38.fa
+
+
