@@ -1,0 +1,3 @@
+##fileformat=VCFv4.2
+#CHROM	POS	ID	REF	ALT	QUAL	FILTER	INFO	FORMAT	D000PTL	D000PTM
+chr1	9162849	chr1:9162849:OG	A	A]chrX:11731580]	0	LowQD;LowQUAL;GraphtyperFilter;inf50bp;AC0	ABHet=-1;ABHom=1;END=9162864;NHet=0;NHomAlt=0;NHomRef=856;NUM_MERGED_SVS=1;PASS_AN=1712;PASS_ratio=1;QD=0;RefLen=1;SVLEN=15;SVMODEL=AGGREGATED;SVSIZE=15;SVTYPE=BND;SV_ID=17;SeqDepth=32767;VarType=OG;GTCNT=0,856,0,0;LCR=0.5625;NS_NOU=47;NS_FRE=856;NS_EU_ALL=856;NS_BRI=322;NS_CEN=29;NS_HAU=86;NS_NOR=19;NS_GRA=49;NS_PAY=297;NS_OTHER=7;NS=856;AN_NOU=94;AN_FRE=1712;AN_EU_ALL=1712;AN_BRI=644;AN_CEN=58;AN_HAU=172;AN_NOR=38;AN_GRA=98;AN_PAY=594;AN_OTHER=14;MAF_NOU=0;MAF_FRE=0;MAF_EU_ALL=0;MAF_BRI=0;MAF_CEN=0;MAF_HAU=0;MAF_NOR=0;MAF_GRA=0;MAF_PAY=0;MAF_OTHER=0;MAF=0;AF=0;MaxAAS=0;MaxAASR=0;PASS_AC=0;AF_NOU=0;AF_FRE=0;AF_EU_ALL=0;AF_BRI=0;AF_CEN=0;AF_HAU=0;AF_NOR=0;AF_GRA=0;AF_PAY=0;AF_OTHER=0;AC_NOU=0;AC_FRE=0;AC_EU_ALL=0;AC_BRI=0;AC_CEN=0;AC_HAU=0;AC_NOR=0;AC_GRA=0;AC_PAY=0;AC_OTHER=0;AC_Het_NOU=0;AC_Het_FRE=0;AC_Het_EU_ALL=0;AC_Het_BRI=0;AC_Het_CEN=0;AC_Het_HAU=0;AC_Het_NOR=0;AC_Het_GRA=0;AC_Het_PAY=0;AC_Het_OTHER=0;AC_Het=0;AC_Hom_NOU=0;AC_Hom_FRE=0;AC_Hom_EU_ALL=0;AC_Hom_BRI=0;AC_Hom_CEN=0;AC_Hom_HAU=0;AC_Hom_NOR=0;AC_Hom_GRA=0;AC_Hom_PAY=0;AC_Hom_OTHER=0;AC_Hom=0;AC_Hemi_NOU=0;AC_Hemi_FRE=0;AC_Hemi_EU_ALL=0;AC_Hemi_BRI=0;AC_Hemi_CEN=0;AC_Hemi_HAU=0;AC_Hemi_NOR=0;AC_Hemi_GRA=0;AC_Hemi_PAY=0;AC_Hemi_OTHER=0;AC_Hemi=0;HWE_NOU=1;ExcHet_NOU=1;HWE_FRE=1;ExcHet_FRE=1;HWE_EU_ALL=1;ExcHet_EU_ALL=1;HWE_BRI=1;ExcHet_BRI=1;HWE_CEN=1;ExcHet_CEN=1;HWE_HAU=1;ExcHet_HAU=1;HWE_NOR=1;ExcHet_NOR=1;HWE_GRA=1;ExcHet_GRA=1;HWE_PAY=1;ExcHet_PAY=1;HWE_OTHER=1;ExcHet_OTHER=1;HWE=1;ExcHet=1;AN=1712;AC=0	GT:AD:MD:DP:GQ:PL:FGT	0/0:35,0:0:35:99:0,99,255:0/0	0/0:43,0:0:43:99:0,125,255:0/0
