@@ -33,10 +33,12 @@ Jan, , 2025, liftoverSV version 0.1.3_beta
 	      e.g. `##assembly=liftoverSV used with hg19ToHg38.over.chain`
 	    - Create the "liftoverSV_version" field
 	      e.g. `##liftoverSV_version=0.1.2_beta; hg19ToHg38.over.chain; August 30 2024 12:30`
-	    - Update the "INFO" and "FORMAT field if one value is missing.
-	      As the format (Number, String) is not known, "Number=." and "Type=String" values are used by default:
+	    - Update the "INFO", "FORMAT" and "FILTER" fields if one value is missing.
+		  Possible rescues in the \"$LIFTOVERSV/share/doc/liftoverSV/vcf_header_lines.txt"\ file.
+		  Else, as the format (Number, String) is not known, "Number=." and "Type=String" values are used by default:
 	      e.g. `##FORMAT=<ID=XXX,Number=.,Type=String,Description="XXX">`
 	      e.g. `##INFO=<ID=YYY,Number=.,Type=String,Description="YYY">`
+		  e.g. `##INFO=<ID=YYY,Description="YYY">`
 
 
 July, 23, 2024, liftoverSV version 0.1.2_beta
